--- a/SecurityManagerClient/.vscode/launch.json
+++ b/SecurityManagerClient/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "firefox",
             "request": "launch",
             "reAttach": true,
-            "url": "http://localhost/index.html",
+            "url": "http://localhost:8000/index.html",
             "webRoot": "${workspaceFolder}"
         }
     ]
