--- a/SecurityManagerWebapi/SecurityManagerWebapi.csproj
+++ b/SecurityManagerWebapi/SecurityManagerWebapi.csproj
@@ -11,7 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />    
     <PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0" />    
-    <PackageReference Include="netcore-util" Version="1.0.0-CI00049" />                
+    <PackageReference Include="netcore-util" Version="1.0.32" />                
   </ItemGroup>
 
   <ItemGroup>
